# actgpr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst  project.md  tutorial.rst
docs/api/: actgpr.rst
src/actgpr/: __init__.py  acquisition.py  mrr.py  objective_fn.py  plotting.py  run.py  surrogate.py
tests/integration/: test_full_loop.py
tests/regression/: test_quadratic_baseline.py
tests/regression/data/: quadratic_baseline.csv
tests/unit/: conftest.py  test_acquisition.py  test_mrr.py  test_objective.py  test_plotting.py  test_run.py  test_surrogate.py
