[tool.poetry]
name = "actgpr"
version = "0.1.0"
description = "Active GPR Optimisation package"
authors = ["Alexander Schroder"]
readme = "README.md"
packages = [{include = "actgpr", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
torch = "^2.12.0"
gpytorch = "^1.15.2"
matplotlib = "^3.11.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.17,<0.16.0)"
]
