[project]
name = "actgpr"
version = "0.1.0"
description = "Active GPR Optimisation — finds the minimum of an expensive scalar objective via a Gaussian Process surrogate and Expected Improvement"
authors = [{name = "Alexander Schröder"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["gaussian-process", "bayesian-optimisation", "active-learning", "surrogate-model", "expected-improvement"]
requires-python = ">=3.13,<3.15"
dependencies = [
    "torch (>=2.12.0,<3.0.0)",
    "gpytorch (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "h5py (>=3.16.0,<4.0.0)",
]

[project.urls]
Repository = "https://github.com/AlxndrSchroeder/actgpr"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [{include = "actgpr", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.17,<0.16.0)",
    "sphinx (>=9.1.0,<10.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Any warning not explicitly allowed below fails the test suite.
    "error",
    # Upstream: gpytorch still uses torch.jit internally; torch >= 2.12
    # deprecates it. Remove once gpytorch migrates off torch.jit.
    "ignore:`torch.jit.script` is deprecated:DeprecationWarning",
]
